updated projects page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
     <nav class="header-nav">
         <ul class="navigation-bar">
             <li><a href="/">HOME</a></li>
-            <li><a href="/Projects/">PROJECTS</a></li>
+            <li><a href="/tags/">PROJECTS</a></li>
             <li><a href="/about/">ABOUT</a></li>
             <li><a href="https://github.com/Zabakes">Github</a></li>
         </ul>
