--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
             <li><a href="/">HOME</a></li>
             <li><a href="/tags/">PROJECTS</a></li>
             <li><a href="/about/">ABOUT</a></li>
-            <li><a href="https://github.com/Zabakes">Github</a></li>
+            <li><a href="https://github.com/Zabakes" target="_blank">Github</a></li>
         </ul>
     </nav>
 </center>
