--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
             <li><a href="/">HOME</a></li>
             <li><a href="/tags/">EXPERIENCE</a></li>
             <li><a href="/about/">ABOUT</a></li>
-            <li><a href="https://github.com/lumpia2" target="_blank">Github</a></li>
+            <li><a href="https://github.com/lumpia2" target="_blank">GITHUB</a></li>
         </ul>
     </nav>
 </center>
